@@ -37,8 +37,6 @@ static const char *arg_unit = NULL;
 static const char *arg_description = NULL;
 static const char *arg_slice = NULL;
 static bool arg_send_sighup = false;
-static BusTransport arg_transport = BUS_TRANSPORT_LOCAL;
-static const char *arg_host = NULL;
 static bool arg_user = false;
 static const char *arg_service_type = NULL;
 static const char *arg_exec_user = NULL;
@@ -55,7 +53,6 @@ static void help(void) {
                "  -h --help                 Show this help\n"
                "     --version              Show package version\n"
                "     --user                 Run as user unit\n"
-               "  -M --machine=CONTAINER    Operate on local container\n"
                "     --scope                Run this as scope rather than service\n"
                "     --unit=UNIT            Run under the specified unit name\n"
                "  -p --property=NAME=VALUE  Set unit property\n"
@@ -115,7 +112,7 @@ static int parse_argv(int argc, char *argv[]) {
         assert(argc >= 0);
         assert(argv);
 
-        while ((c = getopt_long(argc, argv, "+hrM:p:", options, NULL)) >= 0) {
+        while ((c = getopt_long(argc, argv, "+hrp:", options, NULL)) >= 0) {
 
                 switch (c) {
 
@@ -158,11 +155,6 @@ static int parse_argv(int argc, char *argv[]) {
 
                 case 'r':
                         arg_remain_after_exit = true;
-                        break;
-
-                case 'M':
-                        arg_transport = BUS_TRANSPORT_CONTAINER;
-                        arg_host = optarg;
                         break;
 
                 case ARG_SERVICE_TYPE:
@@ -211,16 +203,6 @@ static int parse_argv(int argc, char *argv[]) {
 
         if (optind >= argc) {
                 log_error("Command line to execute required.");
-                return -EINVAL;
-        }
-
-        if (arg_user && arg_transport != BUS_TRANSPORT_LOCAL) {
-                log_error("Execution in user context is not supported on non-local systems.");
-                return -EINVAL;
-        }
-
-        if (arg_scope && arg_transport != BUS_TRANSPORT_LOCAL) {
-                log_error("Scope execution is not supported on non-local systems.");
                 return -EINVAL;
         }
 
@@ -585,7 +567,7 @@ int main(int argc, char* argv[]) {
                 arg_description = description;
         }
 
-        r = bus_open_transport_systemd(arg_transport, arg_host, arg_user, &bus);
+        r = bus_open_transport_systemd(BUS_TRANSPORT_LOCAL, NULL, arg_user, &bus);
         if (r < 0) {
                 log_error("Failed to create bus connection: %s", strerror(-r));
                 goto finish;
