@@ -10,6 +10,8 @@ systemd System and Service Manager
  	- remove “machine” argument option;
  * systemd-analyze:
  	- remove “machine” argument option;
+ * systemd-run:
+ 	- remove “machine” argument option;
  * kdbus:
  	- remove “sd-resolve” module;
  	- remove “sd-utf8” module;
